# ceres_local_parameterization

./: .gitignore  CMakeLists.txt
apps/: CMakeLists.txt  closest_point_on_polynomial.cpp  fit_line.cpp  fit_plane.cpp
functors/: CMakeLists.txt  distcostfunction.cpp  distcostfunction.h  point_to_line_functor.cpp  point_to_line_functor.h  point_to_plane_functor.cpp  point_to_plane_functor.h  polynomialcostfuntion.cpp  polynomialcostfuntion.h
iterator_viewers/: CMakeLists.txt  line_fit_iterator_viewer.cpp  line_fit_iterator_viewer.h
local_parameterizations/: CMakeLists.txt  line_parameterization.cpp  line_parameterization.h  plane_parameterization.cpp  plane_parameterization.h  polynomialparameterization.cpp  polynomialparameterization.h
tools/: CMakeLists.txt  exception.cpp  exception.h  functions.cpp  functions.h  line.h  plane.h  point.h  point2d.h  polynomial.h
